work on templating

--- a/templates/todos.html
+++ b/templates/todos.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+
+{% block content %}
  <h1>TODOs</h1>
     <form method='post'>
         <label>
@@ -21,3 +23,5 @@
         </ul>
 
     {% endif %}
+
+{% endblock %}
